fixed button spacing

--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -97,6 +97,8 @@
                 width: 100%
               button 
                 margin-top: 1.25em
+                @include tablet-phone 
+                  margin-bottom: 15px
             @include tablet-phone
                 height: 40%
                 width: 100%
